Update index.md and video

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: DrivingStereo
+description: A Large-Scale Dataset for Stereo Matching in Autonomous Driving Scenarios
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-tactile
